--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cashfree-sdk": "^0.1.1",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -18,6 +19,8 @@
     "mongoose": "^6.8.4",
     "otp-generator": "^4.0.0",
     "qrcode-terminal": "^0.12.0",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "whatsapp-web.js": "^1.19.2"
   }
 }
