--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.8.4",
     "otp-generator": "^4.0.0",
     "qrcode-terminal": "^0.12.0",
+    "razorpay": "^2.8.4",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
     "whatsapp-web.js": "^1.19.2"
