--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "otp-generator": "^4.0.0",
     "qrcode-terminal": "^0.12.0",
     "razorpay": "^2.8.4",
+    "socket.io": "^4.5.4",
     "stripe": "^11.9.1",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
